--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,11 +9,11 @@
 %body
 	%nav.navbar.navbar-default
 		.container
-			.navbar-brand= link_to "Recipe Box", root_path
-
+			.navbar-brand= link_to "C.R.A.V.E.", root_path
 			- if user_signed_in?
 				%ul.nav.navbar-nav.navbar-right
-					%li= link_to "New Recipe", new_recipe_path
+					%li= link_to "New", new_recipe_path
+					%li= link_to "View All", recipes_path
 					%li= link_to "Sign Out", destroy_user_session_path, method: :delete
 			- else 
 				%ul.nav.navbar-nav.navbar-right
