--- a/app/views/recipes/new.html.haml
+++ b/app/views/recipes/new.html.haml
@@ -1,7 +1,9 @@
-%h1 New Recipe
+.jumbotron
+	.row
+		%h1 New Recipe
 
-= render 'form'
+		= render 'form'
 
-%br/
+		%br/
 
-= link_to "Back", root_path, class: "btn btn-default"
+		= link_to "Back", root_path, class: "btn btn-default"
